# jupyter-plot

./: .gitignore  AGENTS.md  README.md  README_zh.md  Untitled.ipynb  main.py  pyproject.toml
data/26Mar13-PyramidForcingSweep/: total_lite_mean_matrix.csv  total_lite_std_matrix.csv
data/26Mar14-RecentSweep/: total_lite_recent_curves.csv
figure_sources/01_season_consistency/: README.md  plot.py  season_consistency.csv
figure_sources/02_consistency_smoothness/: README.md  plot.py  q1_consistency_with_smoothness_by_season.csv  q1_elim_consistency_by_week.csv
figure_sources/03_uncertainty_by_week/: README.md  plot.py  uncertainty_summary_by_person_week.csv
figure_sources/04_uncertainty_by_celebrity/: README.md  plot.py
figure_sources/05_rank_share_weights/: README.md  plot.py
figure_sources/06_sensitivity_curve/: README.md  plot.py
figure_sources/07_disagreement_rate/: README.md  plot.py
figure_sources/08_audience_leaning/: README.md  plot.py
figure_sources/09_margin_comparison/: README.md  method_compare_by_season.csv  plot.py
figure_sources/10_s27_weekly_scores/: README.md  plot.py
figure_sources/11_s27_method_comparison/: README.md  plot.py
figure_sources/12_s27_elimination_timeline/: README.md  plot.py
figure_sources/13_judge_fan_heatmap/: README.md  head_attention_fan.csv  head_attention_judge.csv  plot.py  token_importance_contrib_fan.csv
figure_sources/14_vbench_total_lite_sr_3d/: README.md
notebooks/26Feb2-mcm/: fig01-season_consistency.ipynb  fig02-consistency_smoothness.ipynb  fig03-uncertainty_by_week.ipynb  task1-q1.ipynb  (+14 more)
(+16 files in other folders)
