[project]
name = "jupyter-plot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hf-transfer>=0.1.9",
    "hf-xet>=1.4.2",
    "huggingface-hub>=1.1.5",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "mplfonts>=0.0.10",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
]
